Spurred on by StarkRavingMad's patch, updated ACE and POSTGRE SQL finding functions to use FIND_PACKAGE calls. Some work done on sending proper world def in mapserver ( still needs a lot of love :) )
git-svn-id: svn://svn.code.sf.net/p/segs/code2@93 a19be42f-918d-4297-8077-ab25d1e4f51f

--- a/Components/Client/Utilities/GUI_Related/CMakeLists.txt
+++ b/Components/Client/Utilities/GUI_Related/CMakeLists.txt
@@ -1,14 +1,15 @@
 # $Id: CMakeLists.txt 270 2006-10-01 18:33:49Z nemerle $
 
-SET(UNICODE TRUE)
+SET(UNICODE FALSE) # needs some serious thought
 IF(UNICODE)
-  ADD_DEFINITIONS(-D_UNICODE -UNICODE)
+  ADD_DEFINITIONS(-D_UNICODE -DUNICODE)
 ENDIF(UNICODE)
 
 SET(wxWidgets_USE_LIBS base core)
 FIND_PACKAGE(Threads REQUIRED)
 FIND_PACKAGE(wxWidgets REQUIRED base core)
 FIND_PACKAGE(OGRE REQUIRED)
+FIND_PACKAGE(ACE REQUIRED)
 FIND_PACKAGE(Boost)
 
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
