--- a/Components/Common/Bitstream/CMakeLists.txt
+++ b/Components/Common/Bitstream/CMakeLists.txt
@@ -7,10 +7,7 @@ ${CMAKE_CURRENT_SOURCE_DIR}/include/BitStream.h
 )
 
 # ACE framework
-FIND_PATH(ACE_path ACE.h
-  /usr/local/include/ace
-  /usr/include/ace
-)
+FIND_PACKAGE(ACE REQUIRED)
 FIND_PACKAGE(ZLIB REQUIRED)
 
 SET(target_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
