--- a/Components/Server/segs_common/CMakeLists.txt
+++ b/Components/Server/segs_common/CMakeLists.txt
@@ -4,10 +4,7 @@ SET(target_CPP
 SET(target_INCLUDE
 )
 
-FIND_PATH(ACE_path ACE.h
-  /usr/local/include/ace
-  /usr/include/ace
-)
+FIND_PACKAGE(ACE REQUIRED)
 FIND_PACKAGE(ZLIB REQUIRED)
 
 SET(target_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
