--- a/Projects/CoX/Servers/AuthServer/CMakeLists.txt
+++ b/Projects/CoX/Servers/AuthServer/CMakeLists.txt
@@ -33,7 +33,12 @@ ${target_CPP}
 ${target_INCLUDE}
 )
 
+FIND_PACKAGE(ACE REQUIRED)
+FIND_PACKAGE(ZLIB REQUIRED)
+FIND_PACKAGE(POSTGRE REQUIRED)
+
 ADD_LIBRARY(authserver_lib STATIC ${target_SOURCES})
+
 IF(BUILD_SEPARATE)
 	ADD_DEFINITIONS(-DSEPARATE)
 	ADD_EXECUTABLE(authserver ${authserver_standaloneSRCS})
