--- a/Projects/Example01/Clients/wxWidgetsBased/CMakeLists.txt
+++ b/Projects/Example01/Clients/wxWidgetsBased/CMakeLists.txt
@@ -1,19 +1,5 @@
 # I found simple solution to setting correct values for finding wxwidgets wxWidgets_LIB_DIR 
 # should be set by hand to proper directory i.e. ..wxWidgets-2.8.4/lib/7_1/vc_lib or wxWidgets-2.8.4/lib/8_0/vc_lib
-FIND_PACKAGE(wxWidgets REQUIRED base core)
-
-IF (wxWidgets_FOUND)
-    IF(wxWidgets_INCLUDE_DIRS)
-      INCLUDE_DIRECTORIES(${wxWidgets_INCLUDE_DIRS})
-    ENDIF(wxWidgets_INCLUDE_DIRS)
-    IF (wxWidgets_CXX_FLAGS)
-      SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${wxWidgets_CXX_FLAGS}")
-    ENDIF(wxWidgets_CXX_FLAGS)
-    IF(wxWidgets_DEFINITIONS)
-      ADD_DEFINITIONS(${wxWidgets_DEFINITIONS})
-    ENDIF(wxWidgets_DEFINITIONS)
-ENDIF (wxWidgets_FOUND)
-
 
 SET(target_CPP
 ${CMAKE_CURRENT_SOURCE_DIR}/src/generated/main.cpp
@@ -25,11 +11,26 @@ ${CMAKE_CURRENT_SOURCE_DIR}/include/generated/LoginDialog.h
 ${CMAKE_CURRENT_SOURCE_DIR}/include/Avatar.h
 ${CMAKE_CURRENT_SOURCE_DIR}/include/Example01.h
 )
-
 SET(target_INCLUDE_DIR 
 	${CMAKE_CURRENT_SOURCE_DIR}/include
     ${CMAKE_CURRENT_SOURCE_DIR}/include/generated
 )
+
+FIND_PACKAGE(wxWidgets REQUIRED base core)
+FIND_PACKAGE(ACE REQUIRED)
+FIND_PACKAGE(ZLIB REQUIRED)
+ 
+IF (wxWidgets_FOUND)
+    IF(wxWidgets_INCLUDE_DIRS)
+      INCLUDE_DIRECTORIES(${wxWidgets_INCLUDE_DIRS})
+    ENDIF(wxWidgets_INCLUDE_DIRS)
+    IF (wxWidgets_CXX_FLAGS)
+      SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${wxWidgets_CXX_FLAGS}")
+    ENDIF(wxWidgets_CXX_FLAGS)
+    IF(wxWidgets_DEFINITIONS)
+      ADD_DEFINITIONS(${wxWidgets_DEFINITIONS})
+    ENDIF(wxWidgets_DEFINITIONS)
+ENDIF (wxWidgets_FOUND)
 
 ADD_DEFINITIONS( 
   -D_CRT_SECURE_NO_WARNINGS
