--- a/Components/Client/Utilities/GUI_Related/CMakeLists.txt
+++ b/Components/Client/Utilities/GUI_Related/CMakeLists.txt
@@ -1,27 +1,5 @@
 # $Id: CMakeLists.txt 270 2006-10-01 18:33:49Z nemerle $
 
-SET(UNICODE FALSE) # needs some serious thought
-IF(UNICODE)
-  ADD_DEFINITIONS(-D_UNICODE -DUNICODE)
-ENDIF(UNICODE)
-
-SET(wxWidgets_USE_LIBS base core)
-FIND_PACKAGE(Threads REQUIRED)
-FIND_PACKAGE(wxWidgets REQUIRED base core)
-FIND_PACKAGE(OGRE REQUIRED)
-FIND_PACKAGE(ACE REQUIRED)
-FIND_PACKAGE(Boost)
-
-INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
-INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)
-INCLUDE_DIRECTORIES(${OGRE_path})
-INCLUDE_DIRECTORIES(${ACE_path})
-INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
-INCLUDE_DIRECTORIES(${wxWidgets_INCLUDE_DIRS})
-
-
-ADD_SUBDIRECTORY(wxOgrePanel)
+ADD_SUBDIRECTORY(OgrePanel)
 #ADD_SUBDIRECTORY(OgreDShow)
 #ADD_SUBDIRECTORY(Goblin)
-
-EXPORT_LIBRARY_DEPENDENCIES(DEPENDENT.TXT)
