Added comments to CMakeLists.txt grouping related things together.
git-svn-id: svn://svn.code.sf.net/p/segs/code2@104 a19be42f-918d-4297-8077-ab25d1e4f51f

--- a/Components/Client/Utilities/GUI_Related/OgrePanel/CMakeLists.txt
+++ b/Components/Client/Utilities/GUI_Related/OgrePanel/CMakeLists.txt
@@ -1,3 +1,4 @@
+############# CMAKE FIND_PACKAGE AND FRIENDS ####
 SET(UNICODE FALSE) # needs some serious thought
 IF(UNICODE)
   ADD_DEFINITIONS(-D_UNICODE -DUNICODE)
@@ -8,6 +9,8 @@ FIND_PACKAGE(OGRE REQUIRED)
 FIND_PACKAGE(ACE REQUIRED)
 FIND_PACKAGE(Boost)
 
+############# COMPONENT SOURCES #################
+
 SET(target_CPP
 ${CMAKE_CURRENT_SOURCE_DIR}/src/stdwx.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/src/wxOgrePanel.cpp
@@ -16,10 +19,13 @@ SET(target_INCLUDE
 ${CMAKE_CURRENT_SOURCE_DIR}/include/stdwx.h
 ${CMAKE_CURRENT_SOURCE_DIR}/include/wxOgrePanel.h
 )
-
 SET(target_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
 
+############# INCLUDING OTHER COMPONENTS
+
 SEGS_ADD_COMPONENT(Globals SOURCE)
+
+############  SETTING INCLUDE DIRECTORIES TO CONTAIN ALL CALLECTED PATHS
 
 INCLUDE_DIRECTORIES(${target_INCLUDE_DIR})
 
@@ -27,20 +33,28 @@ SET (target_SOURCES
 ${target_CPP}
 ${target_INCLUDE}
 )
+
+########### ADD WHAT THIS COMPONENT NEEDS IN THE WAY OF INCLUDES ######
 SET(target_INCLUDE_DIR ${target_INCLUDE_DIR}
     ${OGRE_path}
     ${ACE_path}
     ${Boost_INCLUDE_DIRS}
     ${wxWidgets_INCLUDE_DIRS}
 )
+
+######## COMPONENT REGISTRATION
+
 SEGS_REGISTER_COMPONENT(OgrePanel "${target_INCLUDE_DIR}" "${target_CPP}" "${target_INCLUDE}" )
 
 INCLUDE_DIRECTORIES(${target_INCLUDE_DIR})
 
+########### MISCELENEOUS DECLS
 add_definitions( 
   -D_CRT_SECURE_NO_WARNINGS
   -D_LIB
   -D__WXDEBUG__
 )
 
+############  FINAL CMAKE PRODUCT FOR THIS FILE
 add_library( OgrePanel STATIC ${target_SOURCES} )
+
