Small fix to the build system.
git-svn-id: svn://svn.code.sf.net/p/segs/code2@110 a19be42f-918d-4297-8077-ab25d1e4f51f

--- a/Projects/Example01/Clients/wxWidgetsBased/CMakeLists.txt
+++ b/Projects/Example01/Clients/wxWidgetsBased/CMakeLists.txt
@@ -42,6 +42,7 @@ SEGS_ADD_COMPONENT(Auth SOURCE)
 
 INCLUDE_DIRECTORIES(${target_INCLUDE_DIR})
 INCLUDE_DIRECTORIES(${wxWidgets_INCLUDE_DIRS})
+INCLUDE_DIRECTORIES(${ACE_path})
 
 SET (target_SOURCES
 ${target_CPP}
