* New character name is passed to the map server * Lot's of small fixes to get Entity serializer to spit out proper packets ( still needs work) * Entity now has it's own cpp/h files
git-svn-id: svn://svn.code.sf.net/p/segs/code2@112 a19be42f-918d-4297-8077-ab25d1e4f51f

--- a/Projects/CoX/Servers/MapServer/CMakeLists.txt
+++ b/Projects/CoX/Servers/MapServer/CMakeLists.txt
@@ -12,6 +12,7 @@ ${CMAKE_CURRENT_SOURCE_DIR}/src/EntityStorage.cpp
 )
 SET(target_INCLUDE
 ${CMAKE_CURRENT_SOURCE_DIR}/include/SEGSMap.h
+${CMAKE_CURRENT_SOURCE_DIR}/include/Entity.h
 ${CMAKE_CURRENT_SOURCE_DIR}/include/EntityStorage.h
 ${CMAKE_CURRENT_SOURCE_DIR}/include/MapClient.h
 ${CMAKE_CURRENT_SOURCE_DIR}/include/MapPacket.h
