Some changes to example01.
git-svn-id: svn://svn.code.sf.net/p/segs/code2@136 a19be42f-918d-4297-8077-ab25d1e4f51f

--- a/Components/Client/Utilities/GUI_Related/OgrePanel/CMakeLists.txt
+++ b/Components/Client/Utilities/GUI_Related/OgrePanel/CMakeLists.txt
@@ -36,11 +36,13 @@ ${target_INCLUDE}
 
 ########### ADD WHAT THIS COMPONENT NEEDS IN THE WAY OF INCLUDES ######
 SET(target_INCLUDE_DIR ${target_INCLUDE_DIR}
-    ${OGRE_path}
+    ${OGRE_INCLUDE_DIR}
     ${ACE_path}
     ${Boost_INCLUDE_DIRS}
     ${wxWidgets_INCLUDE_DIRS}
 )
+########### ADD WHAT THIS COMPONENT NEEDS IN THE WAY OF LIBRARIES PATHS ######
+LINK_DIRECTORIES(${OGRE_LIB_DIR})
 
 ######## COMPONENT REGISTRATION
 
