Fix to project creator. Created ChampionsOnline project, 'just in case" :)
git-svn-id: svn://svn.code.sf.net/p/segs/code2@143 a19be42f-918d-4297-8077-ab25d1e4f51f

--- a/Projects/CMakeLists.txt
+++ b/Projects/CMakeLists.txt
@@ -14,3 +14,8 @@ IF(BUILD_Examples)
 ENDIF(BUILD_Examples)
 
 
+
+SET(BUILD_ChampionsOnline TRUE CACHE BOOL "Build ChampionsOnline?")
+IF(BUILD_ChampionsOnline)
+	ADD_SUBDIRECTORY(ChampionsOnline)
+ENDIF(BUILD_ChampionsOnline)
