SEGS_REGISTER_COMPONENT was not called correctly from auto-generated skeleton files.
git-svn-id: svn://svn.code.sf.net/p/segs/code2@144 a19be42f-918d-4297-8077-ab25d1e4f51f

--- a/Projects/ChampionsOnline/Servers/LoginServer/CMakeLists.txt
+++ b/Projects/ChampionsOnline/Servers/LoginServer/CMakeLists.txt
@@ -12,4 +12,4 @@ ${target_CPP}
 ${target_INCLUDE}
 )
 #ADD_LIBRARY(ChampionsOnline_LoginServer STATIC ${target_SOURCES})
-SEGS_REGISTER_COMPONENT(ChampionsOnline_LoginServer ${target_INCLUDE_DIR} ${target_CPP} ${target_INCLUDE} )
+SEGS_REGISTER_COMPONENT(ChampionsOnline_LoginServer "${target_INCLUDE_DIR}" "${target_CPP}" "${target_INCLUDE}" )
