--- a/Projects/ChampionsOnline/Clients/CliClient/CMakeLists.txt
+++ b/Projects/ChampionsOnline/Clients/CliClient/CMakeLists.txt
@@ -12,4 +12,4 @@ ${target_CPP}
 ${target_INCLUDE}
 )
 #ADD_LIBRARY(ChampionsOnline_CliClient STATIC ${target_SOURCES})
-SEGS_REGISTER_COMPONENT(ChampionsOnline_CliClient ${target_INCLUDE_DIR} ${target_CPP} ${target_INCLUDE} )
+SEGS_REGISTER_COMPONENT(ChampionsOnline_CliClient "${target_INCLUDE_DIR}" "${target_CPP}" "${target_INCLUDE}" )
