Console client builds at least :)
git-svn-id: svn://svn.code.sf.net/p/segs/code2@146 a19be42f-918d-4297-8077-ab25d1e4f51f

--- a/Projects/Example01/Clients/ConsoleBased/CMakeLists.txt
+++ b/Projects/Example01/Clients/ConsoleBased/CMakeLists.txt
@@ -1,5 +1,5 @@
 SET(target_CPP
-#${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp
+${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp
 )
 SET(target_INCLUDE
 #${CMAKE_CURRENT_SOURCE_DIR}/include/Avatar.h
