Placeholder files for Hash indexed communications framework It's likely it will be moved to common components.
git-svn-id: svn://svn.code.sf.net/p/segs/code2@152 a19be42f-918d-4297-8077-ab25d1e4f51f

--- a/Projects/CoX/Servers/GameServer/CMakeLists.txt
+++ b/Projects/CoX/Servers/GameServer/CMakeLists.txt
@@ -1,6 +1,7 @@
 # $Id: CMakeLists.txt 294 2006-10-12 17:52:28Z nemerle $
 SET(target_CPP
 ${CMAKE_CURRENT_SOURCE_DIR}/src/Character.cpp
+${CMAKE_CURRENT_SOURCE_DIR}/src/HashStorage.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/src/CharacterClient.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/src/CharacterDatabase.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/src/ClientHandler.cpp
@@ -10,6 +11,7 @@ ${CMAKE_CURRENT_SOURCE_DIR}/src/GameServerEndpoint.cpp
 )
 SET(target_INCLUDE
 ${CMAKE_CURRENT_SOURCE_DIR}/include/Character.h
+${CMAKE_CURRENT_SOURCE_DIR}/include/HashStorage.h
 ${CMAKE_CURRENT_SOURCE_DIR}/include/CharacterClient.h
 ${CMAKE_CURRENT_SOURCE_DIR}/include/CharacterDatabase.h
 ${CMAKE_CURRENT_SOURCE_DIR}/include/ClientHandler.h
