Put a packet data gobbler for user input packets. Small extension to Example1 client
git-svn-id: svn://svn.code.sf.net/p/segs/code2@159 a19be42f-918d-4297-8077-ab25d1e4f51f

--- a/Projects/Example01/Clients/wxWidgetsBased/CMakeLists.txt
+++ b/Projects/Example01/Clients/wxWidgetsBased/CMakeLists.txt
@@ -5,11 +5,13 @@ SET(target_CPP
 ${CMAKE_CURRENT_SOURCE_DIR}/src/generated/main.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/src/generated/LoginDialog.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/src/Avatar.cpp
+${CMAKE_CURRENT_SOURCE_DIR}/src/GameView.cpp
 )
 SET(target_INCLUDE
 ${CMAKE_CURRENT_SOURCE_DIR}/include/generated/LoginDialog.h
 ${CMAKE_CURRENT_SOURCE_DIR}/include/Avatar.h
 ${CMAKE_CURRENT_SOURCE_DIR}/include/Example01.h
+${CMAKE_CURRENT_SOURCE_DIR}/include/GameView.h
 )
 SET(target_INCLUDE_DIR 
 	${CMAKE_CURRENT_SOURCE_DIR}/include
