Updated Authors.txt, Install.txt. Changed Legal.txt to reflect possible license variations for sub-projects
git-svn-id: svn://svn.code.sf.net/p/segs/code2@160 a19be42f-918d-4297-8077-ab25d1e4f51f

--- a/Projects/CMakeLists.txt
+++ b/Projects/CMakeLists.txt
@@ -19,3 +19,7 @@ SET(BUILD_ChampionsOnline TRUE CACHE BOOL "Build ChampionsOnline?")
 IF(BUILD_ChampionsOnline)
 	ADD_SUBDIRECTORY(ChampionsOnline)
 ENDIF(BUILD_ChampionsOnline)
+SET(BUILD_Dust TRUE CACHE BOOL "Build Dust?")
+IF(BUILD_Dust)
+	ADD_SUBDIRECTORY(Dust)
+ENDIF(BUILD_Dust)
