--- a/Projects/CoX/Servers/MapServer/CMakeLists.txt
+++ b/Projects/CoX/Servers/MapServer/CMakeLists.txt
@@ -24,7 +24,7 @@ ${CMAKE_CURRENT_SOURCE_DIR}/include/MapHandler.h
 SET(target_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
 SET(target_DEPENDS "")
 
-SEGS_ADD_COMPONENT(segs_server_common LIB)
+SEGS_ADD_COMPONENT(cox_server_common LIB)
 
 INCLUDE_DIRECTORIES(${target_INCLUDE_DIR})
 
