some NetStructure method renames + moved method bodies to cpp file.
git-svn-id: svn://svn.code.sf.net/p/segs/code2@167 a19be42f-918d-4297-8077-ab25d1e4f51f

--- a/Projects/CoX/Common/Servers/CMakeLists.txt
+++ b/Projects/CoX/Common/Servers/CMakeLists.txt
@@ -4,6 +4,7 @@ SET(target_CPP
 ${CMAKE_CURRENT_SOURCE_DIR}/src/ServerProtocolHandler.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/src/AdminServerInterface.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/src/AuthServerInterface.cpp
+${CMAKE_CURRENT_SOURCE_DIR}/src/CommonNetStructures.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/src/GameServerInterface.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/src/MapServerInterface.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/src/NetManager.cpp
