Added EventSystem Replaced convoluted AuthServer processing with events. Removed some stale code ( commented out and such ) ServerManager now allows direct access to game server list. last part.
git-svn-id: svn://svn.code.sf.net/p/segs/code2@177 a19be42f-918d-4297-8077-ab25d1e4f51f

--- a/Projects/CMakeLists.txt
+++ b/Projects/CMakeLists.txt
@@ -1,6 +1,6 @@
 # $Id: CMakeLists.txt 306 2007-01-23 12:16:25Z nemerle $
 SET(BUILD_CoX TRUE CACHE BOOL "Should the CoX emulation be built?")
-SET(BUILD_Examples TRUE CACHE BOOL "Should the Example Projects be built?")
+SET(BUILD_Examples FALSE CACHE BOOL "Should the Example Projects be built?")
 
 IF(BUILD_CoX)
 	ADD_SUBDIRECTORY(CoX)
@@ -15,11 +15,7 @@ ENDIF(BUILD_Examples)
 
 
 
-SET(BUILD_ChampionsOnline TRUE CACHE BOOL "Build ChampionsOnline?")
+SET(BUILD_ChampionsOnline FALSE CACHE BOOL "Build ChampionsOnline?")
 IF(BUILD_ChampionsOnline)
 	ADD_SUBDIRECTORY(ChampionsOnline)
 ENDIF(BUILD_ChampionsOnline)
-SET(BUILD_Dust TRUE CACHE BOOL "Build Dust?")
-IF(BUILD_Dust)
-	ADD_SUBDIRECTORY(Dust)
-ENDIF(BUILD_Dust)
