--- a/Projects/CoX/Common/Servers/CMakeLists.txt
+++ b/Projects/CoX/Common/Servers/CMakeLists.txt
@@ -1,20 +1,18 @@
 # $Id: CMakeLists.txt 301 2006-12-26 15:50:44Z nemerle $
 
 SET(target_CPP
-${CMAKE_CURRENT_SOURCE_DIR}/src/ServerProtocolHandler.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/src/AdminServerInterface.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/src/AuthServerInterface.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/src/CommonNetStructures.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/src/GameServerInterface.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/src/MapServerInterface.cpp
-${CMAKE_CURRENT_SOURCE_DIR}/src/NetManager.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/src/ServerSupport.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/src/RoamingServer.cpp
-${CMAKE_CURRENT_SOURCE_DIR}/src/ServerEndpoint.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/src/ServerHandle.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/src/ServerManager.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/src/InterfaceManager.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/src/Database.cpp
+${CMAKE_CURRENT_SOURCE_DIR}/src/CRUD_Link.cpp
 )
 SET(target_INCLUDE
 ${CMAKE_CURRENT_SOURCE_DIR}/include/AdminServerInterface.h
@@ -23,7 +21,6 @@ ${CMAKE_CURRENT_SOURCE_DIR}/include/Client.h
 ${CMAKE_CURRENT_SOURCE_DIR}/include/CommonNetStructures.h
 ${CMAKE_CURRENT_SOURCE_DIR}/include/GameServerInterface.h
 ${CMAKE_CURRENT_SOURCE_DIR}/include/MapServerInterface.h
-${CMAKE_CURRENT_SOURCE_DIR}/include/NetManager.h
 ${CMAKE_CURRENT_SOURCE_DIR}/include/ServerHandle.h
 ${CMAKE_CURRENT_SOURCE_DIR}/include/server_support.h
 ${CMAKE_CURRENT_SOURCE_DIR}/include/Server.h
@@ -31,6 +28,8 @@ ${CMAKE_CURRENT_SOURCE_DIR}/include/RoamingServer.h
 ${CMAKE_CURRENT_SOURCE_DIR}/include/InterfaceManager.h
 ${CMAKE_CURRENT_SOURCE_DIR}/include/ServerManager.h
 ${CMAKE_CURRENT_SOURCE_DIR}/include/Database.h
+${CMAKE_CURRENT_SOURCE_DIR}/include/CRUD_Link.h
+${CMAKE_CURRENT_SOURCE_DIR}/include/CRUD_Events.h
 )
 
 FIND_PACKAGE(POSTGRE REQUIRED)
