--- a/Projects/CoX/Common/CMakeLists.txt
+++ b/Projects/CoX/Common/CMakeLists.txt
@@ -1,3 +1,4 @@
 # $Id: CMakeLists.txt 301 2006-12-26 15:50:44Z nemerle $
 ADD_SUBDIRECTORY(Servers)
+ADD_SUBDIRECTORY(NetStructures)
 ADD_SUBDIRECTORY(AuthProtocol)
