Implemented bin file reading for costumes and colors. Game server now attempts to read the bin files from ./data/ directory.
git-svn-id: svn://svn.code.sf.net/p/segs/code2@183 a19be42f-918d-4297-8077-ab25d1e4f51f

--- a/Projects/CoX/Common/StaticStorage/CMakeLists.txt
+++ b/Projects/CoX/Common/StaticStorage/CMakeLists.txt
@@ -2,10 +2,15 @@
 
 SET(target_CPP
 ${CMAKE_CURRENT_SOURCE_DIR}/src/Filesystem.cpp
+${CMAKE_CURRENT_SOURCE_DIR}/src/ReadableStructures.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/src/CoXHash.cpp
+${CMAKE_CURRENT_SOURCE_DIR}/src/DataStorage.cpp
+
 )
 SET(target_INCLUDE
 ${CMAKE_CURRENT_SOURCE_DIR}/include/Filesystem.h
+${CMAKE_CURRENT_SOURCE_DIR}/include/ReadableStructures.h
+${CMAKE_CURRENT_SOURCE_DIR}/include/DataStorage.h
 ${CMAKE_CURRENT_SOURCE_DIR}/include/CoXHash.h
 )
 
