Major change -> AdminServer is responsible for both databases now. Fix for BitStream string reading.. I have no idea how we've missed that :) Lot's of decoupling between account data, characters, and Entities Database schema update. Database transaction support. This commit might be versioned 0.1.9, it almost does everything version 0.2.0 should. I expect some bug reports :)
git-svn-id: svn://svn.code.sf.net/p/segs/code2@188 a19be42f-918d-4297-8077-ab25d1e4f51f

--- a/Projects/CoX/Data/local_1.cfg
+++ b/Projects/CoX/Data/local_1.cfg
@@ -1,6 +1,13 @@
 [AdminServer]
+[AdminServer/AccountDatabase]
 db_host = "127.0.0.1"
 db_name = "segs"
+db_user = "segsadmin"
+db_pass = "secretpass"
+
+[AdminServer/CharacterDatabase]
+db_host = "127.0.0.1"
+db_name = "segs_game"
 db_user = "segsadmin"
 db_pass = "secretpass"
 
@@ -13,10 +20,6 @@ server_name  ="first server"
 listen_addr  ="0.0.0.0:7002"
 location_addr="10.0.0.1:7002"
 max_players  =200
-db_host = "127.0.0.1"
-db_name = "segs_game"
-db_user = "segsadmin"
-db_pass = "secretpass"
 
 [MapServer]  
 # here one day we will set maximum number of spawned map processes
