--- a/Projects/CoX/Servers/GameServer/CMakeLists.txt
+++ b/Projects/CoX/Servers/GameServer/CMakeLists.txt
@@ -2,7 +2,6 @@
 SET(target_CPP
 ${CMAKE_CURRENT_SOURCE_DIR}/src/HashStorage.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/src/CharacterClient.cpp
-${CMAKE_CURRENT_SOURCE_DIR}/src/CharacterDatabase.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/src/GameHandler.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/src/GameServer.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/src/GameEvents.cpp
@@ -11,7 +10,6 @@ ${CMAKE_CURRENT_SOURCE_DIR}/src/GameLink.cpp
 SET(target_INCLUDE
 ${CMAKE_CURRENT_SOURCE_DIR}/include/HashStorage.h
 ${CMAKE_CURRENT_SOURCE_DIR}/include/CharacterClient.h
-${CMAKE_CURRENT_SOURCE_DIR}/include/CharacterDatabase.h
 ${CMAKE_CURRENT_SOURCE_DIR}/include/GameServer.h
 ${CMAKE_CURRENT_SOURCE_DIR}/include/GameHandler.h
 ${CMAKE_CURRENT_SOURCE_DIR}/include/GameEvents.h
@@ -22,6 +20,7 @@ SET(target_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
 SET(target_DEPENDS "")
 
 SEGS_ADD_COMPONENT(cox_server_common LIB)
+SEGS_ADD_COMPONENT(adminserver_lib LIB) # later on this will be an AdminServerProxy component
 
 INCLUDE_DIRECTORIES(${target_INCLUDE_DIR})
 
