Disabled the Example project by default.. it needs much more coding before it gets anywhere.
git-svn-id: svn://svn.code.sf.net/p/segs/code2@189 a19be42f-918d-4297-8077-ab25d1e4f51f

--- a/Projects/CMakeLists.txt
+++ b/Projects/CMakeLists.txt
@@ -7,7 +7,7 @@ IF(BUILD_CoX)
 ENDIF(BUILD_CoX)
 
 IF(BUILD_Examples)
-	SET(BUILD_Example01 TRUE CACHE BOOL "Should the first example be built?")
+	SET(BUILD_Example01 FALSE CACHE BOOL "Should the first example be built?")
     IF(BUILD_Example01)
         ADD_SUBDIRECTORY(Example01)
     ENDIF(BUILD_Example01)
