CMake updates ( minimal version bumped to 2.6, switched to using global properties instead of cache entries ) Removed some more now unused code ( GameProtocol & co. ) Split out AccountInfo class into it's own files. Created ClientSession class that holds AccountInfo and ClientLinkState instances.
git-svn-id: svn://svn.code.sf.net/p/segs/code2@190 a19be42f-918d-4297-8077-ab25d1e4f51f

--- a/Components/Common/CRUDP_Protocol/CMakeLists.txt
+++ b/Components/Common/CRUDP_Protocol/CMakeLists.txt
@@ -2,17 +2,17 @@
 SET(target_CPP
 ${CMAKE_CURRENT_SOURCE_DIR}/src/CRUDP_Packet.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/src/CRUDP_Protocol.cpp
-${CMAKE_CURRENT_SOURCE_DIR}/src/GameProtocol.cpp
-${CMAKE_CURRENT_SOURCE_DIR}/src/GameProtocolHandler.cpp
-${CMAKE_CURRENT_SOURCE_DIR}/src/PacketBase.cpp
+#${CMAKE_CURRENT_SOURCE_DIR}/src/GameProtocol.cpp
+#${CMAKE_CURRENT_SOURCE_DIR}/src/GameProtocolHandler.cpp
+#${CMAKE_CURRENT_SOURCE_DIR}/src/PacketBase.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/src/PacketCodec.cpp
 )
 SET(target_INCLUDE
 ${CMAKE_CURRENT_SOURCE_DIR}/include/CRUDP_Packet.h
 ${CMAKE_CURRENT_SOURCE_DIR}/include/CRUDP_Protocol.h
-${CMAKE_CURRENT_SOURCE_DIR}/include/GameProtocol.h
-${CMAKE_CURRENT_SOURCE_DIR}/include/GameProtocolHandler.h
-${CMAKE_CURRENT_SOURCE_DIR}/include/PacketBase.h
+#${CMAKE_CURRENT_SOURCE_DIR}/include/GameProtocol.h
+#${CMAKE_CURRENT_SOURCE_DIR}/include/GameProtocolHandler.h
+#${CMAKE_CURRENT_SOURCE_DIR}/include/PacketBase.h
 ${CMAKE_CURRENT_SOURCE_DIR}/include/PacketCodec.h
 )
 
