Updated config file Clean dump of both db schemas. Updated install script
git-svn-id: svn://svn.code.sf.net/p/segs/code2@207 a19be42f-918d-4297-8077-ab25d1e4f51f

--- a/Projects/CoX/Data/local_1.cfg
+++ b/Projects/CoX/Data/local_1.cfg
@@ -1,28 +1,29 @@
 [AdminServer]
+
 [AdminServer/AccountDatabase]
-db_host = "127.0.0.1"
+db_host = "database_server_ip"
 db_name = "segs"
 db_user = "segsadmin"
-db_pass = "secretpass"
+db_pass = "segs123"
 
 [AdminServer/CharacterDatabase]
-db_host = "127.0.0.1"
+db_host = "database_server_ip"
 db_name = "segs_game"
 db_user = "segsadmin"
-db_pass = "secretpass"
+db_pass = "segs123"
 
 # warning the port here has to be 2106, as it's the address most clients expect to see
 [AuthServer] 
-listen_addr= "0.0.0.0:2106"
+listen_addr= "this_is_the_ip_the_clients_will_connect_to:2106"
 
 [GameServer] 
 server_name  ="first server"
-listen_addr  ="0.0.0.0:7002"
-location_addr="10.0.0.1:7002"
+listen_addr  ="this_is_the_ip_the_clients_will_connect_to:7002"
+location_addr="this_is_the_ip_the_clients_will_receive_from_server:7002"
 max_players  =200
 
 [MapServer]  
 # here one day we will set maximum number of spawned map processes
-listen_addr  ="0.0.0.0:7003"
-location_addr="10.0.0.1:7003"
+listen_addr  ="this_is_the_ip_the_clients_will_connect_to:7003"
+location_addr="this_is_the_ip_the_clients_will_receive_from_server:7003"
 
