New utility class SEGSTimer for the Event subsystem. ( needs testing )
git-svn-id: svn://svn.code.sf.net/p/segs/code2@222 a19be42f-918d-4297-8077-ab25d1e4f51f

--- a/Components/Common/EventSystem/CMakeLists.txt
+++ b/Components/Common/EventSystem/CMakeLists.txt
@@ -1,11 +1,13 @@
 # $Id$
 SET(target_CPP
 ${CMAKE_CURRENT_SOURCE_DIR}/src/EventProcessor.cpp
+${CMAKE_CURRENT_SOURCE_DIR}/src/SEGSTimer.cpp
 )
 SET(target_INCLUDE
 ${CMAKE_CURRENT_SOURCE_DIR}/include/EventProcessor.h
 ${CMAKE_CURRENT_SOURCE_DIR}/include/SEGSEvent.h
 ${CMAKE_CURRENT_SOURCE_DIR}/include/LinkLevelEvent.h
+${CMAKE_CURRENT_SOURCE_DIR}/include/SEGSTimer.h
 )
 
 FIND_PACKAGE(ACE REQUIRED)
