--- a/Projects/CoX/Utilities/CMakeLists.txt
+++ b/Projects/CoX/Utilities/CMakeLists.txt
@@ -1,1 +1,5 @@
 # $Id$
+OPTION(BLD_COX_MAP_VIEWER "Build CoX map file viewer ?" OFF)
+IF(BLD_COX_MAP_VIEWER)
+  ADD_SUBDIRECTORY(MapViewer)
+ENDIF(BLD_COX_MAP_VIEWER)
