Big change to structure reader, now it uses template classes instead of macros, this allows us to store proper pointers in nested structures. Added missing include to MapViewer Fixed segs.sql ( it shouldn't have tried to create a database )
git-svn-id: svn://svn.code.sf.net/p/segs/code2@231 a19be42f-918d-4297-8077-ab25d1e4f51f

--- a/Projects/CoX/Utilities/MapViewer/CMakeLists.txt
+++ b/Projects/CoX/Utilities/MapViewer/CMakeLists.txt
@@ -37,7 +37,7 @@ SET(target_DEPENDS "")
 
 SEGS_ADD_COMPONENT(static_storage LIB)
 
-INCLUDE_DIRECTORIES(${target_INCLUDE_DIR})
+INCLUDE_DIRECTORIES(${target_INCLUDE_DIR} ${ACE_path})
 
 SET (target_SOURCES
 ${gui_SOURCES}
