--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
 
 PROJECT(SEGS)
-
+SET(CMAKE_BUILD_TYPE Debug)
 SET(MAIN_INCLUDE_PATH $ENV{INCLUDE} CACHE PATH "Includes")
 SET(MAIN_LIB_PATH $ENV{LIB} CACHE PATH "Libraries")
 
@@ -13,9 +13,9 @@ SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/CMakeScripts;${CMAKE_MODULE_PATH})
 INCLUDE(SEGS_Components)
 
 IF(CMAKE_CXX_COMPILER MATCHES cl)
-     IF(CMAKE_GENERATOR STREQUAL "Visual Studio 8 2005")
+	 IF(CMAKE_GENERATOR STREQUAL "Visual Studio 8 2005")
 	add_definitions( -D_CRT_SECURE_NO_WARNINGS )
-     ENDIF(CMAKE_GENERATOR STREQUAL "Visual Studio 8 2005")
+	 ENDIF(CMAKE_GENERATOR STREQUAL "Visual Studio 8 2005")
 ENDIF (CMAKE_CXX_COMPILER MATCHES cl)
 
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/common/include)
